--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
-  <h1>Hello from Angular 2 App with Webpack</h1>
-  <img src="../public/images/angular.png">
+  <router-outlet></router-outlet>
+    <button pButton type="text" (click)="count()" label="Click">Fuck you nigga</button>
 </main>
