latest router upgrade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main>
   <router-outlet></router-outlet>
+    <button pButton type="text" [routerLink]="['/first']" label="Click">Fuck you nigga</button>
+    <button pButton type="text" [routerLink]="['/second']" label="Click">Fuck you nigga</button>
+    <button pButton type="text" [routerLink]="['/third']" label="Click">Fuck you nigga</button>
     <button pButton type="text" (click)="count()" label="Click">Fuck you nigga</button>
 </main>
