--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
+<header-login></header-login>
 <main>
-  <router-outlet></router-outlet>
-    <button pButton type="text" (click)="count()" label="Click">Fuck you nigga</button>
+    <router-outlet></router-outlet>
+    <!--<button pButton type="text" [routerLink]="['/first']" label="Click"></button>-->
+    <!--<router-outlet></router-outlet>-->
+    <!--<button pButton type="text" [routerLink]="['/third']" label="third"></button>-->
+    <!--<h3 class="first">Default</h3>-->
+    <!--<p-slideMenu [model]="items"></p-slideMenu>-->
+
 </main>
