--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <header-login></header-login>
+<carousel-component></carousel-component>
 <main>
     <router-outlet></router-outlet>
     <!--<button pButton type="text" [routerLink]="['/first']" label="Click"></button>-->
