--- a/src/app/header-login/header-login.html
+++ b/src/app/header-login/header-login.html
@@ -3,7 +3,8 @@
                 <!-- LOGO -->
                 <div class="topbar-left">
                     <div class="text-center">
-                        <a href="index.html" class="logo"><i class="icon-magnet icon-c-logo"></i><span>Ub<i class="md md-album"></i>ld</span></a>
+                        <a href="index.html" class="logo"><i class="icon-magnet icon-c-logo"></i><span><img class="logobrand" src="../../public/images/logo.png"
+                                                                                                            alt=""></span></a>
                     </div>
                 </div>
 
@@ -11,131 +12,22 @@
                 <div class="navbar navbar-default" role="navigation">
                     <div class="container">
                         <div class="">
-                            <div class="pull-left">
-                                <button class="button-menu-mobile open-left">
-                                    <i class="ion-navicon"></i>
-                                </button>
-                                <span class="clearfix"></span>
-                            </div>
-
                             <ul class="nav navbar-nav navbar-right pull-right">
-                                <li class="dropdown hidden-xs">
-                                    <a href="#" data-target="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" aria-expanded="true">
-                                        <i class="icon-bell"></i> <span class="badge badge-xs badge-danger">3</span>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-menu-lg">
-                                        <li class="notifi-title"><span class="label label-default pull-right">New 3</span>Notification</li>
-                                        <li class="list-group nicescroll notification-list">
-                                           <!-- list item-->
-                                           <a href="javascript:void(0);" class="list-group-item">
-                                              <div class="media">
-                                                 <div class="pull-left p-r-10">
-                                                    <em class="fa fa-diamond fa-2x text-primary"></em>
-                                                 </div>
-                                                 <div class="media-body">
-                                                    <h5 class="media-heading">A new order has been placed A new order has been placed</h5>
-                                                    <p class="m-0">
-                                                        <small>There are new settings available</small>
-                                                    </p>
-                                                 </div>
-                                              </div>
-                                           </a>
-
-                                           <!-- list item-->
-                                           <a href="javascript:void(0);" class="list-group-item">
-                                              <div class="media">
-                                                 <div class="pull-left p-r-10">
-                                                    <em class="fa fa-cog fa-2x text-custom"></em>
-                                                 </div>
-                                                 <div class="media-body">
-                                                    <h5 class="media-heading">New settings</h5>
-                                                    <p class="m-0">
-                                                        <small>There are new settings available</small>
-                                                    </p>
-                                                 </div>
-                                              </div>
-                                           </a>
-
-                                           <!-- list item-->
-                                           <a href="javascript:void(0);" class="list-group-item">
-                                              <div class="media">
-                                                 <div class="pull-left p-r-10">
-                                                    <em class="fa fa-bell-o fa-2x text-danger"></em>
-                                                 </div>
-                                                 <div class="media-body">
-                                                    <h5 class="media-heading">Updates</h5>
-                                                    <p class="m-0">
-                                                        <small>There are <span class="text-primary font-600">2</span> new updates available</small>
-                                                    </p>
-                                                 </div>
-                                              </div>
-                                           </a>
-
-                                           <!-- list item-->
-                                           <a href="javascript:void(0);" class="list-group-item">
-                                              <div class="media">
-                                                 <div class="pull-left p-r-10">
-                                                    <em class="fa fa-user-plus fa-2x text-info"></em>
-                                                 </div>
-                                                 <div class="media-body">
-                                                    <h5 class="media-heading">New user registered</h5>
-                                                    <p class="m-0">
-                                                        <small>You have 10 unread messages</small>
-                                                    </p>
-                                                 </div>
-                                              </div>
-                                           </a>
-
-                                           <!-- list item-->
-                                           <a href="javascript:void(0);" class="list-group-item">
-                                              <div class="media">
-                                                 <div class="pull-left p-r-10">
-                                                    <em class="fa fa-diamond fa-2x text-primary"></em>
-                                                 </div>
-                                                 <div class="media-body">
-                                                    <h5 class="media-heading">A new order has been placed A new order has been placed</h5>
-                                                    <p class="m-0">
-                                                        <small>There are new settings available</small>
-                                                    </p>
-                                                 </div>
-                                              </div>
-                                           </a>
-
-                                           <!-- list item-->
-                                            <a href="javascript:void(0);" class="list-group-item">
-                                                <div class="media">
-                                                    <div class="pull-left p-r-10">
-                                                     <em class="fa fa-cog fa-2x text-custom"></em>
-                                                    </div>
-                                                    <div class="media-body">
-                                                      <h5 class="media-heading">New settings</h5>
-                                                      <p class="m-0">
-                                                        <small>There are new settings available</small>
-                                                    </p>
-                                                    </div>
-                                              </div>
-                                           </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:void(0);" class="list-group-item text-right">
-                                                <small class="font-600">See all notifications</small>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
                                 <!--<li class="hidden-xs" *ngIf="loggedIn">-->
                                     <!--<a href="#" id="btn-fullscreen" class="waves-effect waves-light"><i class="icon-size-fullscreen"></i></a>-->
                                 <!--</li>-->
-                                <li class="hidden-xs" *ngIf="!loggedIn">
-                                    <div class="form-cl">
-                                        <form role="search" class="navbar-left app-search pull-left hidden-xs">
-                                             <input type="text" placeholder="Логин" class="form-control">
-                                             <input type="text" placeholder="Пароль" class="form-control">
-                                             <button type="text">Войти</button>
+                                    <div class="form-cl col-md-12 col-md-pull-3"  *ngIf="!loggedIn">
+                                        <form class="navbar-left app-search pull-left hidden-xs" [ngFormModel]="loginForm" (submit)="doLogin($event,loginForm)">
+                                             <input ngControl="email" type="email" placeholder="Логин" class="form-control">
+
+                                             <input ngControl="password" type="password" placeholder="Пароль" class="form-control">
+
+                                                <span class="resps" [routerLink]="['/carousel']">Забыли пароль?</span>
+                                            <button style="margin-left: 20px"  type="submit" class="btn btn-white btn-custom btn-rounded waves-effect">Войти</button>
+                                            <button type="button" [routerLink]="['/signpage']" class="btn btn-info btn-custom btn-rounded waves-effect waves-light">Регистрация</button>
                                         </form>
                                     </div>
                                     <!--<a href="#" class="right-bar-toggle waves-effect waves-light"><i class="icon-settings"></i></a>-->
-                                </li>
                                 <li class="dropdown" *ngIf="loggedIn">
                                     <a href="javascript:void(0)" class="dropdown-toggle profile" data-toggle="dropdown" aria-expanded="true"><img src="../../public/images/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
                                     <ul class="dropdown-menu">
