--- a/src/app/header-login/header-login.html
+++ b/src/app/header-login/header-login.html
@@ -22,7 +22,7 @@
 
                                              <input ngControl="password" type="password" placeholder="Пароль" class="form-control">
 
-                                                <span class="resps" [routerLink]="['/carousel']">Забыли пароль?</span>
+                                                <span class="resps" [routerLink]="['/resetpw']">Забыли пароль?</span>
                                             <button style="margin-left: 20px"  type="submit" class="btn btn-white btn-custom btn-rounded waves-effect">Войти</button>
                                             <button type="button" [routerLink]="['/signpage']" class="btn btn-info btn-custom btn-rounded waves-effect waves-light">Регистрация</button>
                                         </form>
